--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
     "nodemailer": "^6.10.0",
-    "typescript": "^5.8.2"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.9"
   }
 }
