--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "target": "ESNext",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true
   }
 }
