--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple node application to send music promo to DJ's. Creating to make my life easier.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
